--- a/PlayableSpade/PlayableSpade.csproj
+++ b/PlayableSpade/PlayableSpade.csproj
@@ -33,6 +33,9 @@
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Freedom Planet 2\FP2_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
+    <Reference Include="FP2Lib">
+      <HintPath>..\..\..\..\Desktop\Test\BepInEx\plugins\lib\FP2Lib.dll</HintPath>
+    </Reference>
     <Reference Include="Rewired_Core">
       <HintPath>..\..\..\..\Desktop\Test\FP2_Data\Managed\Rewired_Core.dll</HintPath>
     </Reference>
